nullaway_error_C55FB6CF-ED6C-460A-B6F6-64F35D7EE597.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/converter/MappingJackson2MessageConverter.java:203: error: [NullAway] dereferenced expression cause.getMessage() is @Nullable
		boolean debugLevel = (cause instanceof JsonMappingException && cause.getMessage().startsWith("Cannot find"));
		                                                                                 ^
    (see http://t.uber.com/nullaway )
